sazid/tests/snapshots/stream_response_test__tests__construct_chat_completion_request_message.snap
---
source: tests/stream_response_test.rs
expression: "&session.data"
---
messages:
  - message:
      ChatCompletionRequestMessage:
        role: user
        content: testing testing 1 2 3
    rendered:
      role: user
      content: testing testing 1 2 3
      stylized: "You:\ntesting testing 1 2 3"
      wrapped_lines:
        - "You:"
        - testing testing 1 2 3
      function_call: ~
      name: ~
      finish_reason: ~
    finished: false
    function_called: false
    response_count: 0
rendered_text: "You:\ntesting testing 1 2 3"
window_width: 80

