sazid/tests/snapshots/stream_response_test__tests__ntest_callback-31.snap
---
source: tests/stream_response_test.rs
expression: "&combined"
---
- index: 0
  delta:
    role: assistant
    content: "Hello! How can I assist you today? If you have any questions or need information on a specific topic, feel free to ask."
    function_call: ~
  finish_reason: stop

